# solver-osqp

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  python-publish.yml
docker/: Dockerfile  compose.yml  compose_evaluation.yml
evaluation/: compare_qpoases_osqp.py
include/: OSQP_solver.h
marinholab/solvers/osqp/: __init__.py  example.py  example_kinematics.py  solver.py
src/: core.cpp  core_function.cpp
